--- a/www/index.html
+++ b/www/index.html
@@ -178,7 +178,7 @@
                 type: 'line',
                 data: {
                     labels: labels,
-                    datasets: [{ label: 'Temperatura (°C)', data: temps, borderColor: '#ff6384', backgroundColor: '#ff638422', fill: true, tension: 0, pointRadius: 4, pointHitRadius: 20 }]
+                    datasets: [{ label: 'Temperatura (°C)', data: temps, borderColor: '#ff6384', backgroundColor: '#ff638422', fill: true, tension: 0, pointRadius: 4, pointHoverRadius: 8, pointHoverBorderWidth: 5, pointHitRadius: 10 }]
                 },
                 options: commonOptions
             });
@@ -188,7 +188,7 @@
                 type: 'line',
                 data: {
                     labels: labels,
-                    datasets: [{ label: 'Umidità (%)', data: hums, borderColor: '#36a2eb', backgroundColor: '#36a2eb22', fill: true, tension: 0, pointRadius: 4, pointHitRadius: 20 }]
+                    datasets: [{ label: 'Umidità (%)', data: hums, borderColor: '#36a2eb', backgroundColor: '#36a2eb22', fill: true, tension: 0, pointRadius: 4, pointHoverRadius: 8, pointHoverBorderWidth: 5, pointHitRadius: 10 }]
                 },
                 options: commonOptions
             });
